maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: not found: value DirectionNORTH
				case DirectionNORTH => avance()
                                     ^Escaper:26: error: not found: value DirectionOUEST
				case DirectionOUEST => droite(); if(!estFaceMur) avance()
                                     ^Escaper:27: error: not found: value DirectionEST
				case DirectionEST => gauche(); if(!estFaceMur) avance()
                                     ^Escaper:28: error: not found: value DirectionSUD
				case DirectionSUD => gauche(); gauche(); if(!estFaceMur) avance()
                                     ^