maze.lessons.maze.island.IslandMaze.scala.code
override def run() 
{
	def keepHandOnSideWall()
	{
		gauche()
		if(estFaceMur())
		{
			droite()
			if(!estFaceMur())
				avance()
			else	droite()
		}
		else avance()
	}

	while(getY()!=0)
	{
		if(estFaceMur())
			keepHandOnSideWall()
		else if(!estFaceMur())
		{
			getDirection() match
			{
				case DirectionNORTH => avance()
				case DirectionOUEST => droite(); if(!estFaceMur) avance()
				case DirectionEST => gauche(); if(!estFaceMur) avance()
				case DirectionSUD => gauche(); gauche(); if(!estFaceMur) avance()
			}		
		}
	}	
	
	while(!estSurBiscuit())
	{
		keepHandOnSideWall()
	}

	prendBiscuit()
}
